--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,12 @@
-upstream frontend_app {
-    server frontend:5173;
-}
+resolver 127.0.0.11 valid=10s;
 
 upstream backend_app {
-    server server:3001;
+    zone backend_app 64k;
+    server server:3001 resolve;
+}
+
+upstream frontend_app {
+    server frontend:5173;
 }
 
 server {
