--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,29 +28,17 @@ services:
       - "3001"
     depends_on:
       - db
-
-  frontend:
-    build:
-      context: ./client-new #./client              
-      dockerfile: Dockerfile
-    container_name: passwordmanager-frontend
-    restart: always
-    ports:
-      - "5173:5173"          
-    depends_on:
-      - server
-
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: nginx/Dockerfile
     container_name: passwordmanager-nginx
     restart: always
     depends_on:
-      - frontend
       - server
     ports:
-      - "8080:80"   # נכנסים דרך http://localhost:8080
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro  
+      - "8080:80"
+ 
 
 volumes:
   db_data:
