--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,8 @@ jobs:
           context: .
           file: ./nginx/Dockerfile
           push: true
+          build-args: |
+            CACHEBUST=${{ github.run_number }}
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.meta.outputs.IMAGE_NGINX }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.meta.outputs.IMAGE_NGINX }}:${{ steps.meta.outputs.TAG_SHA }}
