--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^2.3.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "jest": "^30.2.0",
